# qstream

client/: Makefile.am  client.vcproj  client.vcxproj  client.vcxproj.filters  configure.ac  controller.cpp  controller.h  main.cpp  output.cpp  output.h  trackerconnector.cpp  trackerconnector.h
client/m4/: ltoptions.m4  ltversion.m4  lt~obsolete.m4
common/: MemPipe.cpp  MemPipe.h  Pipe.h  data.cpp  data.h  log.cpp  log.h  msg_ack.cpp  msg_ack.h  msg_data.cpp  msg_data.h  msg_spread.cpp  msg_spread.h  msg_tree.cpp  msg_tree.h  os_functions.cpp  os_functions.h  packet_ids.h  settings.h  socket_functions.h  socket_functions_lin.cpp  socket_header.h  stringtools.cpp  stringtools.h  symmatrix.cpp  symmatrix.h  tcpstack.cpp  tcpstack.h  types.h  uppermatrix.cpp  uppermatrix.h
server/: Makefile.am  configure.ac  controller.cpp  controller.h  input.cpp  input.h  main.cpp  server.sln  server.vcproj  server.vcxproj  server.vcxproj.filters  tracker.cpp  tracker.h
server/m4/: libtool.m4  ltsugar.m4
